--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
-  text-align: center;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html{
+    font-size: 62.5%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body{
+    background: rgb(3, 0, 31);
+    color: white;
+    font-family: 'Poppins', sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.App{
+    min-height: 100vh;
+    display: flex;
 }
 
-.App-link {
-  color: #61dafb;
+.sideBar{
+    flex: 3;
+    border-right: 1px solid rgb(100, 100, 100);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main{
+    flex: 9;
+}
+
+.logo{
+    margin-right: 1rem;
+}
+
+.brand{
+    font-size: 2rem;
+}
+
+.upperSide{
+    padding: 2.5rem;
+    border-bottom: 1px solid rgb(100, 100, 100);
+    height: 70%;
+}
+
+.upperSideTop{
+    display: flex;
+    align-items: center;
+    margin: 2.5rem;
+}
+
+.addBtn{
+    height: 2rem;
+    padding-right: 1rem;
+}
+.midBtn{
+    background: #5A4BFF;
+    border: none;
+    color: white;
+    padding: 1.5rem;
+    font-size: 1.5rem;
+    width: 25rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 3rem;
 }
