--- a/src/App.css
+++ b/src/App.css
@@ -62,5 +62,49 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0 auto;
     margin-bottom: 3rem;
+    border-radius: 0.5rem;
+}
+
+.query{
+    display: flex;
+    align-items: center;
+    background: transparent;
+    color: rgba(222, 222, 222, 1);
+    padding: 1.5rem;
+    width: 25rem;
+    margin: 1rem auto;
+    border-radius: 0.5rem;
+    border: 1px solid rgba(98, 98, 98, 1);
+}
+
+.query>img{
+    margin-right: 2rem;
+    object-fit: cover;
+    height: 1.75rem;
+}
+
+.lowerSide{
+    padding: 2rem;
+}
+
+.listItems{
+    margin: 0.75rem;
+    display: flex;
+    align-items: center;
+    font-size: 1.3rem;
+}
+
+.listItemsImg{
+    margin: 1rem;
+    padding-right: 1rem;
+}
+
+.listItemsImg:nth-child(1)>.listItemsImg{
+    margin-right: 0.5rem;
+}
+
+.listItemsImg:nth-child(3)>.listItemsImg{
+    margin-right: 0.75rem;
 }
