--- a/src/App.css
+++ b/src/App.css
@@ -108,3 +108,39 @@ body{
 .listItemsImg:nth-child(3)>.listItemsImg{
     margin-right: 0.75rem;
 }
+
+.main{
+    min-height: calc(100vh - 14rem);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 6rem 10rem;
+}
+
+.chatFooter{
+    margin-top: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.inp{
+    padding: 0.5rem;
+    background: rgba(28, 30, 58, 1);
+    display: flex;
+    align-items: center;
+}
+
+.inp>input{
+    width: calc(100% - 3rem);
+    outline: none;
+    padding: 1.25rem;
+    color: white;
+}
+
+.inp>input, .send{
+    background: transparent;
+    border: none;
+}
